{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 20,
  "lineage": "695ae953-daf9-378d-17ce-3e0e70bb0b32",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/networkSecurityGroups/yasar-nsg",
            "location": "westus",
            "name": "yasar-nsg",
            "resource_group_name": "yasar-ntmstf-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp-allow",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "dev",
              "owner": "yasar"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "yasar-nsg",
            "resource_group_name": "yasar-ntmstf-rg",
            "subscription_id": "0efc1bfe-4f3f-4361-b143-b737300e5e14"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/networkSecurityGroups/yasar-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "yasar-nsg",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "yasar-ntmstf-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-http",
            "network_security_group_name": "yasar-nsg",
            "resource_group_name": "yasar-ntmstf-rg",
            "subscription_id": "0efc1bfe-4f3f-4361-b143-b737300e5e14"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/networkSecurityGroups/yasar-nsg/securityRules/rdp-allow",
            "name": "rdp-allow",
            "network_security_group_name": "yasar-nsg",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "yasar-ntmstf-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "rdp-allow",
            "network_security_group_name": "yasar-nsg",
            "resource_group_name": "yasar-ntmstf-rg",
            "subscription_id": "0efc1bfe-4f3f-4361-b143-b737300e5e14"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/virtualNetworks/yasar-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "yasar-ntmstf-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "yasar-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "web-subnet",
            "resource_group_name": "yasar-ntmstf-rg",
            "subscription_id": "0efc1bfe-4f3f-4361-b143-b737300e5e14",
            "virtual_network_name": "yasar-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "21d91c0e-e96e-4b94-92d3-3e4e0299b3ab",
            "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/virtualNetworks/yasar-vnet",
            "location": "westus",
            "name": "yasar-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "yasar-ntmstf-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/virtualNetworks/yasar-vnet/subnets/web-subnet",
                "name": "web-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.1.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0efc1bfe-4f3f-4361-b143-b737300e5e14/resourceGroups/yasar-ntmstf-rg/providers/Microsoft.Network/virtualNetworks/yasar-vnet/subnets/app-subnet",
                "name": "app-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "env": "dev",
              "owner": "yasar"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "yasar-vnet",
            "resource_group_name": "yasar-ntmstf-rg",
            "subscription_id": "0efc1bfe-4f3f-4361-b143-b737300e5e14"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}